# plantform

./: Arduino_program.ino  README.md  change_log.txt
online_circuit_experiment_web/: Dockerfile  package-lock.json  package.json  vue.config.js
online_circuit_experiment_web/src/: main.js
online_circuit_experiment_web/src/components/: Dashboard.vue  LF.vue  LF_Circuit.vue  LF_Circuit_management.vue  Login.vue  ShowJSON.vue  TurboAdpter.vue  config.js  data_circuit.json  test_view.vue  test_websocket.vue
online_circuit_experiment_web/src/mixins/: userMixin.js
online_circuit_experiment_web/src/router/: index.js
python/: 2022-10-03 13-36-56.txt  circuit_save.json  cnode_to_relay1.xlsx  main.py  test_example.ipynb
python/models/: users.py
python/reference_code/SerialPort/: relay_matrix.py
python/reference_code/multimeter/: DM3058E.py  dc_current_measurement.py  dc_voltage_measurement.py  dm3058_api.py
python/reference_code/oscilloscope/: acquire_wave.py  acquire_wave_live.py  hardcopy.py  tbs1202b.py  tbs1202b_api.py  teklive.py  tekmeas.py
python/reference_code/power_supplier/: dp832_api.py  dp832_example.py
python/reference_code/rigol-dm3058-main/: README.md  setup.cfg
python/reference_code/rigol-dm3058-main/examples/: dc_current_measurement.py  dc_voltage_measurement.py
python/reference_code/rigol-dm3058-main/src/dm3058/: __init__.py  dm3058.py
python/routers/: exp_routes.py
python/utils/: auth.py  database.py
python/websocket/: fastapi_socketio.py  fastapi_socketio_pro_con.py  pro_con.py  v1.py  websocket_example.py  ww.py  生产消费.py
(+63 files in other folders)
